--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,10 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*.local
+.env.local
+.env
+.env.development
+.env.production
 
 # vercel
 .vercel
