--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "firebase": "^9.19.1",
     "next": "13.2.4",
     "react": "18.2.0",
